@@ -1,21 +1,18 @@
-
 # Spring Boot MCP Starter
 
-[![License](https://img.shields.io/badge/license-Apache%202.0-blue.svg)](https://github.com/trae/mcp-spring-boot-starter/blob/main/LICENSE)
-[![Maven Central](https://img.shields.io/maven-central/v/com.github.trae/mcp-spring-boot-starter.svg)](https://search.maven.org/artifact/com.github.trae/mcp-spring-boot-starter)
-[![Build Status](https://github.com/trae/mcp-spring-boot-starter/actions/workflows/ci.yml/badge.svg)](https://github.com/trae/mcp-spring-boot-starter/actions)
+[![License](https://img.shields.io/badge/license-Apache%202.0-blue.svg)](https://github.com/star/mcp-spring-boot-starter/blob/main/LICENSE)
+[![Maven Central](https://img.shields.io/maven-central/v/com.github.star/mcp-spring-boot-starter.svg)](https://search.maven.org/artifact/com.github.star/mcp-spring-boot-starter)
 
-一个 Spring Boot Starter，让 Java 开发者用最少的代码将自己的服务暴露为 MCP（Model Context Protocol）Tool，供 AI Agent 调用。
+一个基于 **官方 MCP SDK** 的 Spring Boot Starter，让你通过注解快速将 Java 服务暴露为 MCP（Model Context Protocol）Tool，供 AI Agent（如 Trae、Claude Desktop 等）调用。
 
 ## 🎯 功能特性
 
-- **注解驱动**：使用 `@Tool` 和 `@ToolParam` 注解快速定义工具
+- **官方 SDK**：基于 `io.modelcontextprotocol.sdk:mcp` 官方 SDK 实现，完全遵循 MCP 协议规范
+- **STDIO 传输**：使用标准输入/输出与 MCP 客户端通信，兼容 Trae、Claude Desktop 等主流客户端
+- **注解驱动**：使用 `@McpTool` 和 `@McpToolParam` 注解快速定义工具，无需手动注册
 - **自动扫描**：Spring 启动时自动扫描并注册所有标记的工具
-- **标准 Schema**：自动生成符合 MCP 标准的 Tool Schema（JSON Schema）
-- **REST API**：提供 RESTful API 供外部调用
-- **自动配置**：零配置开箱即用
-- **类型转换**：自动处理参数类型转换
-- **参数校验**：支持必填参数校验
+- **自动配置**：零配置开箱即用，只需添加依赖
+- **Bean 兼容**：同时支持 Bean 方式定义工具（兼容 `McpServerFeatures.SyncToolSpecification`）
 
 ## 📦 快速开始
 
@@ -31,21 +28,29 @@
 
 ### 2. 定义工具
 
+使用注解方式（推荐）：
+
 ```java
 @Component
-public class WeatherTools {
+@McpTool
+public class CalculatorTools {
 
-    @Tool("获取指定城市的当前天气")
+    @McpTool(name = "add", description = "加法运算")
+    public int add(
+            @McpToolParam(name = "a", description = "第一个数", type = "integer") int a,
+            @McpToolParam(name = "b", description = "第二个数", type = "integer") int b) {
+        return a + b;
+    }
+
+    @McpTool(name = "getWeather", description = "获取指定城市的天气")
     public String getWeather(
-            @ToolParam(value = "city", description = "城市名称") String city) {
+            @McpToolParam(name = "city", description = "城市名称") String city) {
         return weatherService.query(city);
     }
 }
 ```
 
 ### 3. 启动应用
-
-创建 Spring Boot 启动类：
 
 ```java
 @SpringBootApplication
@@ -56,149 +61,148 @@ public class Application {
 }
 ```
 
-## 🔌 API 接口
+### 4. 配置 MCP 客户端（以 Trae 为例）
 
-### 获取工具列表
-
-```
-GET /mcp/tools
-```
-
-**响应示例：**
-
-```json
-[
-  {
-    "name": "getWeather",
-    "description": "获取指定城市的当前天气",
-    "streaming": false,
-    "parameters": [
-      {
-        "name": "city",
-        "description": "城市名称",
-        "required": true,
-        "type": "String",
-        "defaultValue": ""
-      }
-    ]
-  }
-]
-```
-
-### 调用工具
-
-```
-POST /mcp/call
-```
-
-**请求示例：**
+在 Trae 的 MCP 配置文件中添加：
 
 ```json
 {
-  "toolName": "getWeather",
-  "arguments": {
-    "city": "北京"
+  "mcpServers": {
+    "my-mcp-server": {
+      "command": "java",
+      "args": [
+        "--enable-native-access=ALL-UNNAMED",
+        "-jar",
+        "your-app.jar"
+      ]
+    }
   }
 }
 ```
 
-**响应示例：**
-
-```json
-{
-  "success": true,
-  "result": "2024-01-15 10:30:00 北京的天气：晴天，温度 25°C",
-  "error": null
-}
-```
-
-### 获取工具 Schema
-
-```
-GET /mcp/schema
-```
-
-返回符合 JSON Schema 格式的工具定义，便于 AI Agent 理解和调用。
-
-### 健康检查
-
-```
-GET /mcp/health
-```
+> **注意**：`--enable-native-access=ALL-UNNAMED` 是必须的 JVM 参数，用于避免 Tomcat JNI 加载警告。
 
 ## 📝 注解说明
 
-### @Tool
+### @McpTool
 
-标记一个方法为 MCP Tool。
+标记一个类或方法为 MCP Tool。
 
 | 属性 | 类型 | 默认值 | 说明 |
 |------|------|--------|------|
-| `value` | String | "" | 工具描述（简写） |
-| `name` | String | "" | 工具名称（默认使用方法名） |
-| `description` | String | "" | 工具详细描述 |
-| `streaming` | boolean | false | 是否流式输出 |
+| `name` | String | 方法名 | 工具名称 |
+| `description` | String | "" | 工具描述 |
 
-### @ToolParam
+**用法一：类级别注解**
+类上添加 `@McpTool`，类中所有公共方法都会注册为工具。
+
+**用法二：方法级别注解**
+方法上添加 `@McpTool`，精确控制哪些方法作为工具暴露。
+
+### @McpToolParam
 
 标记方法参数为 Tool 参数。
 
 | 属性 | 类型 | 默认值 | 说明 |
 |------|------|--------|------|
-| `value` | String | "" | 参数名称（默认使用参数名） |
+| `name` | String | 参数名 | 参数名称 |
 | `description` | String | "" | 参数描述 |
 | `required` | boolean | true | 是否必填 |
-| `defaultValue` | String | "" | 默认值 |
+| `type` | String | "string" | JSON Schema 类型（integer/number/string/boolean） |
+
+## 📋 Bean 方式定义工具（高级用法）
+
+如果需要更精细的控制，可以使用官方 SDK 的 Bean 方式：
+
+```java
+@Configuration
+public class AdvancedToolConfig {
+
+    @Bean
+    public McpServerFeatures.SyncToolSpecification complexTool() {
+        return new McpServerFeatures.SyncToolSpecification(
+            McpSchema.Tool.builder()
+                .name("complexTool")
+                .description("复杂工具示例")
+                .inputSchema(...)
+                .build(),
+            (exchange, args) -> {
+                // 自定义处理逻辑
+                return new McpSchema.CallToolResult(
+                    List.of(new McpSchema.TextContent("result")),
+                    false
+                );
+            }
+        );
+    }
+}
+```
 
 ## ⚙️ 配置项
 
 | 配置项 | 类型 | 默认值 | 说明 |
 |--------|------|--------|------|
 | `mcp.enabled` | boolean | true | 是否启用 MCP 功能 |
-| `mcp.base-path` | String | `/mcp` | API 基础路径 |
-| `mcp.expose-api` | boolean | true | 是否暴露 REST API |
-| `mcp.streaming-enabled` | boolean | true | 是否启用流式输出 |
+| `mcp.base-path` | String | `/mcp` | 路径前缀（保留字段） |
 
 **示例配置（application.yml）：**
 
 ```yaml
 mcp:
   enabled: true
-  base-path: /mcp
-  expose-api: true
-  streaming-enabled: true
+
+spring:
+  main:
+    web-application-type: none  # 禁用Web服务器，使用纯STDIO模式
 ```
 
 ## 🏗️ 项目结构
 
 ```
 mcp-spring-boot-starter/
-├── mcp-spring-boot-core/          # 核心注解与模型
-│   ├── annotation/               # @Tool、@ToolParam 注解
-│   ├── model/                    # 数据模型
-│   ├── executor/                 # 执行器接口
-│   └── registry/                 # 注册中心接口
-├── mcp-spring-boot-autoconfigure/ # 自动配置
-│   ├── McpProperties.java        # 配置属性
-│   ├── McpAutoConfiguration.java # 自动配置类
-│   ├── registry/                 # 默认注册中心实现
-│   ├── scanner/                  # 工具扫描器
-│   ├── executor/                 # 默认执行器实现
-│   └── controller/               # REST API 控制器
-├── mcp-spring-boot-starter/      # 聚合 Starter
-└── mcp-sample-server/            # 示例项目
+├── mcp-spring-boot-autoconfigure/     # 自动配置
+│   ├── annotation/
+│   │   ├── McpTool.java              # @McpTool 注解
+│   │   └── McpToolParam.java         # @McpToolParam 注解
+│   ├── McpToolRegistrar.java         # 注解工具注册器
+│   ├── McpAutoConfiguration.java     # 自动配置类
+│   └── McpProperties.java            # 配置属性
+├── mcp-spring-boot-starter/           # 聚合 Starter
+└── mcp-sample-server/                 # 示例项目
+    └── tool/
+        ├── CalculatorTools.java       # 注解方式示例
+        └── WeatherTools.java          # 注解方式示例
 ```
 
-## 🚀 运行示例项目
+## 🚀 构建与运行
+
+### 构建项目
 
 ```bash
-cd mcp-sample-server
-mvn spring-boot:run
+cd SpringBootMCPStarter
+mvn clean package -DskipTests
 ```
 
-启动后访问：
-- 工具列表：http://localhost:8080/mcp/tools
-- 健康检查：http://localhost:8080/mcp/health
+### 运行示例服务
+
+```bash
+cd mcp-sample-server/target
+java --enable-native-access=ALL-UNNAMED -jar mcp-sample-server-1.0.0-SNAPSHOT.jar
+```
+
+### 测试 STDIO 通信
+
+```bash
+echo '{"jsonrpc":"2.0","id":1,"method":"initialize","params":{"protocolVersion":"2024-11-05","capabilities":{},"clientInfo":{"name":"test","version":"1.0"}}}' | \
+java --enable-native-access=ALL-UNNAMED -jar mcp-sample-server-1.0.0-SNAPSHOT.jar
+```
+
+## 🔧 依赖版本
+
+- **Java**: 17+
+- **Spring Boot**: 3.2.0
+- **MCP SDK**: io.modelcontextprotocol.sdk:mcp 0.16.0
+- **Maven**: 3.8+
 
 ## 🤝 贡献指南
 
@@ -221,10 +225,9 @@ Apache 2.0 License - 详见 [LICENSE](LICENSE)
 
 ## 🙋‍♂️ 作者
 
-**trae**
+**star**
 
-- GitHub: [@star](https://github.com/trae)
-- Email: star@github.com
+- GitHub: [@star](https://github.com/star)
 
 ---
 
